--- a/tasker-service.properties
+++ b/tasker-service.properties
@@ -1,3 +1,8 @@
 server.port=7979
 
 management.endpoints.web.exposure.include=*
+
+adServerServiceName=adserver-service
+serviceProtocol=http://
+
+servicePath=/ad
